--- a/WorkoutTrainer/app/src/main/AndroidManifest.xml
+++ b/WorkoutTrainer/app/src/main/AndroidManifest.xml
@@ -2,19 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="vn.husc.it.bb.workouttrainer">
 
+    <!-- Include required permissions for Google Mobile Ads to run. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Exercise">
+        <activity android:name=".ExerciseList" />
+        <activity android:name=".ExerciseTab" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BMITab"
+            android:icon="@drawable/back" />
+        <activity android:name=".AboutUsTab" />
+        <activity android:name=".ExerciseDetail" />
+        <activity android:name=".WorkoutActivity" />
+        <activity android:name=".WorkoutDetail" />
+        <activity android:name=".WorkoutList" />
+        <activity android:name=".WorkoutFinish"></activity>
     </application>
 
 </manifest>
